# kleist

./: .gitignore  CMakeLists.txt  README.md  sim_main.cpp
ddr/: lpddr5_model.sv
ddrc/: lpddr5_controller.sv  lpddr5_controller_enum.sv  lpddr5_controller_struct.sv  lpddr5_params.sv
notes/: DDR_READ.md
tb/: lpddr5_tb.sv
